scripts/nullaway/annotator/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8.txt
../annotator/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/Student.java:210: error: [NullAway] dereferenced expression dormRoom is @Nullable
        Dorm d = dormRoom.getDorm();
                         ^
    (see http://t.uber.com/nullaway )
../annotator/urlaa051fbd3d_WheezePuppet_collegeDiversity_tgz-pJ8-edu_umw_cpsc_collegediversity_SimJ8/src/edu/umw/cpsc/collegediversity/UpperclassHousingSelection.java:90: error: [NullAway] dereferenced expression upperclassmen is @Nullable
        for(int x=upperclassmen.size()-1; x>=0; x--){
                               ^
    (see http://t.uber.com/nullaway )
2 errors
